turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: type mismatch;
 found   : Int(1)
 required: Array[Int]
var rule:Array[Array[Array[Int]]] = Array( Array( Array(1, LEFT, 0), Array(0, NOTURN, 0)), Array(1, LEFT, 1), Array(0, NOTURN, 1)) //couleur mvt etat
                                                                                                 ^Turmite:14: error: type mismatch;
 found   : Int
 required: Array[Int]
var rule:Array[Array[Array[Int]]] = Array( Array( Array(1, LEFT, 0), Array(0, NOTURN, 0)), Array(1, LEFT, 1), Array(0, NOTURN, 1)) //couleur mvt etat
                                                                                                    ^Turmite:14: error: type mismatch;
 found   : Int(1)
 required: Array[Int]
var rule:Array[Array[Array[Int]]] = Array( Array( Array(1, LEFT, 0), Array(0, NOTURN, 0)), Array(1, LEFT, 1), Array(0, NOTURN, 1)) //couleur mvt etat
                                                                                                          ^Turmite:14: error: type mismatch;
 found   : Int(0)
 required: Array[Int]
var rule:Array[Array[Array[Int]]] = Array( Array( Array(1, LEFT, 0), Array(0, NOTURN, 0)), Array(1, LEFT, 1), Array(0, NOTURN, 1)) //couleur mvt etat
                                                                                                                    ^Turmite:14: error: type mismatch;
 found   : Int
 required: Array[Int]
var rule:Array[Array[Array[Int]]] = Array( Array( Array(1, LEFT, 0), Array(0, NOTURN, 0)), Array(1, LEFT, 1), Array(0, NOTURN, 1)) //couleur mvt etat
                                                                                                                       ^Turmite:14: error: type mismatch;
 found   : Int(1)
 required: Array[Int]
var rule:Array[Array[Array[Int]]] = Array( Array( Array(1, LEFT, 0), Array(0, NOTURN, 0)), Array(1, LEFT, 1), Array(0, NOTURN, 1)) //couleur mvt etat
                                                                                                                               ^